style: fix session hour text alignement

--- a/src/blocks/_wordcamp-schedule.scss
+++ b/src/blocks/_wordcamp-schedule.scss
@@ -14,3 +14,7 @@
   @include font-headings();
   @include small();
 }
+
+.wordcamp-schedule__session-title + p {
+  text-align: left;
+}
